added SimpleException and converted all methods to use it, eliminating throws signatures where possible